--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -34,6 +34,7 @@
   border-radius: 10px;
   grid-row: 1 / 2;
 }
+
 .profilePic {
   grid-column: 1 / 3;
 }
@@ -99,6 +100,11 @@
 
 .noPicEmail {
   grid-column: 1 / 3;
+}
+
+.noPicEditName {
+  grid-column: 1 / 3;
+  justify-self: center;
 }
 
 .fileInput {
